deployments/default/wireguard-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-test
  labels:
    app: wireguard-test
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: wireguard-test
