deployments/default/wireguard-test/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wireguard-test
  labels:
    app: wireguard-test
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: test.bjws.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: wireguard-test
          servicePort: http
